--- a/.eslintrc
+++ b/.eslintrc
@@ -33,7 +33,7 @@
         "react/jsx-indent-props": [2, 4],
         "react/prop-types": "off",
         "react/jsx-one-expression-per-line": [0, { "allow": "none" }],
-        "react/jsx-props-no-spreading": [{
+        "react/jsx-props-no-spreading": [2, {
             "html": "ignore",
             "custom": "ignore"
         }],
