implement code that pulls in our shop data from firestore and stores it into the shop reducer from our shop page. Also included our withSpinner HOC

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,7 +33,7 @@
         "react/jsx-indent-props": [2, 4],
         "react/prop-types": "off",
         "react/jsx-one-expression-per-line": [0, { "allow": "none" }],
-        "react/jsx-props-no-spreading": [2, {
+        "react/jsx-props-no-spreading": [{
             "html": "ignore",
             "custom": "ignore"
         }],
