added compression library to express for gzipping on heroku

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
         "react",
         "prettier"
     ],
-    "parser": "babel-eslint",
+    // "parser": "babel-eslint",
     "env": 
     {    
         "node": true,    
